--- a/style.css
+++ b/style.css
@@ -1,5 +1,142 @@
 body {
- background-image: url("/files/background.jpg");
-  
+ background-image: url('../Signalis/files/background.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  margin: 0;
+  padding: 0;
+  font-family: 'Bruno Ace SC',Arial, Helvetica, sans-serif;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
+.top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 20px;
+    
+}
+
+.top-pic img {
+    display: flex;
+    flex: 1;
+    width: 150px;
+    height: 90px;
+    border-radius: 10px;
+    margin-left: 30px;
+}
+
+.top-end {
+    margin-right: 30px;
+    display: flex;
+    gap: 30px;
+}
+
+.top-end a {
+    color: white;
+    text-decoration: none;
+    
+}
+
+.main {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.set-one {
+display: flex;
+flex-direction: column;
+}
+
+.set-one img {
+    width: 400px;
+    height: 200px;
+    margin-top: 50px;
+    margin-left: 80px;
+    border-radius: 10px;
+    border: 5px solid rgba(255, 255, 255, 0.626);
+    opacity: 0.9;
+}
+
+.set-two {
+display: flex;
+flex-direction: column;
+}
+
+.set-two img {
+    width: 400px;
+    height: 200px;
+    margin-top: 50px;
+    margin-right: 80px;
+    border-radius: 10px;
+    border: 5px solid rgba(255, 255, 255, 0.626);
+    opacity: 0.9;
+}
+
+.describe {
+    display: flex;
+    color: white;
+    align-items: center;
+    justify-content: space-around;
+    padding: 50px;
+    
+}
+
+.text p {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    color: white;
+    width: 300px;
+    margin-left: 100px;
+}
+
+h1 {
+    width: 200px;
+    margin-left: 100px;
+}
+
+.showcase {
+    display: flex;
+    flex-direction: row;
+    
+    
+}
+
+.showcase img {
+    width: 500px;
+    border-radius: 10px;
+    border: 5px solid rgba(255, 255, 255, 0.626);
+    opacity: 0.9;
+    
+}
+
+.praise {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    align-items: center;
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    background-color: rgba(0, 0, 0, 0.418);
+
+}
+
+h2 {
+    font-size: 30px;
+}
+
+.praise-text {
+font-size: 25px;
+}
+
+.goomplay {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
